# learn_QTOpenGL

./: CMakeLists.txt  GLSL.qrc  baseshape.cpp  baseshape.h  camera.cpp  camera.h  cube.cpp  cube.frag  cube.h  fragment.frag  light.frag  main.cpp  multidimensiondata.h  self_glwidget.cpp  self_glwidget.h  sphere.cpp  sphere.h  type.h  vertex.vert  widget.cpp  widget.h
